Fix toast spacing issues
Fixed the toast spacing issues

--- a/app/assets/stylesheets/framework/variables.scss
+++ b/app/assets/stylesheets/framework/variables.scss
@@ -507,7 +507,6 @@ $toast-height: 48px;
 $toast-max-width: 586px;
 $toast-padding-right: 42px;
 $toast-default-margin: 8px;
-$toast-action-margin-left: 16px;
 $toast-background-opacity: 0.95;
 
 /*
